[gd_scene load_steps=3 format=1]

[ext_resource path="res://scenes/interface/hud.gd" type="Script" id=1]
[ext_resource path="res://scenes/interface/gauge_4_circle.tscn" type="PackedScene" id=2]

[node name="Hud" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="LifeShieldContainer" type="ReferenceFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 970.0
margin/right = 110.0
margin/bottom = 1070.0

[node name="LifeShield" parent="LifeShieldContainer" instance=ExtResource( 2 )]

transform/pos = Vector2( 50, 50 )

[node name="RadarArrowBox" type="ReferenceFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 150.0
margin/right = 150.0
margin/bottom = 150.0

[node name="WeaponsSelectionContainer" type="ReferenceFrame" parent="."]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 208.0
margin/top = 110.0
margin/right = 8.0
margin/bottom = 10.0


[editable path="LifeShieldContainer/LifeShield"]
